--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   fluttertoast: ^8.0.9
   crypton: ^2.0.3
   flutter_animated_dialog: ^2.0.1
+  flutter_chat_ui: ^1.5.8
 
 dev_dependencies:
   flutter_test:
