--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   crypton: ^2.0.3
   flutter_animated_dialog: ^2.0.1
   flutter_chat_ui: ^1.5.8
+  cached_network_image: ^3.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
