--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_chat_ui: ^1.5.8
   cached_network_image: ^3.2.0
   intl: ^0.17.0
+  elegant_notification: ^1.5.2
 
 dev_dependencies:
   flutter_test:
