--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter_chat_ui: ^1.5.8
   cached_network_image: ^3.2.0
   intl: ^0.17.0
+  flutter_zoom_drawer: ^3.0.1
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
