Add QR Code Generation from Private Key

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_zoom_drawer: ^3.0.1
   flutter_switch: ^0.3.2
   animated_search_bar: ^2.2.0
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
