--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   flutter_switch: ^0.3.2
   animated_search_bar: ^2.2.0
   qr_flutter: ^4.0.0
+  flutter_qr_reader: ^1.0.5
+  file_picker: ^4.5.1
 
 dev_dependencies:
   flutter_test:
