--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   qr_flutter: ^4.0.0
   flutter_qr_reader: ^1.0.5
   file_picker: ^4.5.1
+  animate_do: ^2.1.0
 
 dev_dependencies:
   flutter_test:
