Add Login persistence

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   file_picker: ^4.5.1
   animate_do: ^2.1.0
   image_picker: ^0.8.5+2
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   flutter_test:
