--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.8.5+2
   animated_text_kit: ^4.2.1
   uuid: ^3.0.6
+  google_fonts: ^2.3.2
 
 dev_dependencies:
   flutter_test:
