--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
                <action android:name="android.intent.action.VIEW" />
                <category android:name="android.intent.category.DEFAULT" />
                <category android:name="android.intent.category.BROWSABLE" />
-               <data android:scheme="appwrite-callback-yolo" />
+               <data android:scheme="appwrite-callback-ecat" />
            </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
